amf-cli/shared/src/test/resources/parser-results/raml/error/empty-map-resource-type.raml
#%RAML 1.0
title: ApidesignerConsolePanelTests_jwqhs8857105

resourceTypes:
  searchableColl:
    securedBy: [ null ]

/test:
  type: {}